--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -97,6 +97,10 @@ blockquote {
     left: 2px;
 }
 
+.btn-height-text {
+    line-height: 33px;
+}
+
 .btn-floating {
     width:60px;
     height:60px;
