offline, practices, header and files * Offline tournaments using syncing through json download * fixed practices map image to use new fileupload * made fileupload more general with addToQueue function * redesigned header to include more icons and moved search to dialog

--- a/client/header.less
+++ b/client/header.less
@@ -99,6 +99,11 @@
             padding: 8px 20px;
         }
     }
+    .navbar-nav {
+        li {
+            float:left;
+        }
+    }
     .navigation-area {
         background-color: white;
         display: block;
@@ -194,22 +199,10 @@
             padding: 10px 10px;
             border-top: 1px solid lightgray;
         }
-        .footer.list-group {
-            position: absolute;
-            border-top-width:2px;
-            top:auto;
-            margin:0px;
-            height:60px;
-            bottom: 0px;
-            left:0px;
-            width: 100%;
-            .list-group-item {
-            }
-            .copyright-note {
-                font-size:0.7em;
-                padding:2px;
-                padding-left:8px;
-            }
+        .copyright-note {
+            font-size:0.7em;
+            padding:2px;
+            padding-left:8px;
         }
     }
     .navigation-area.active {
