--- a/client/_editing.less
+++ b/client/_editing.less
@@ -19,6 +19,8 @@
     background-color: white;
     min-height: 10em;
     box-shadow: 2px 2px 4px rgba(0,0,0,0.25) inset;
+    max-height: calc(100vh - 125px);
+    overflow-y: auto;
 }
 
 .opt-editable-field,.opt-editable-field:hover,.opt-editable-field:focus {
@@ -49,6 +51,7 @@
     padding: 4px;
     padding-right: 20px;
     min-height: 25px;
+    max-height: 75vh;
 }
 
 .editing-container:hover {
