fixed practice bugs, image loading, uoodle bugs
fixed small image bug

removed bigfile

--- a/client/images.less
+++ b/client/images.less
@@ -9,10 +9,14 @@
             width:auto;
         }
     }
-    img {
+    img.big-image {
         max-width:100%;
         height:auto;
         transition: all 200ms;
+        opacity: 1;
+    }
+    img.big-image.not-available {
+        opacity: 0;
     }
     .start-content {
         position: relative;
