--- a/client/practice.less
+++ b/client/practice.less
@@ -10,8 +10,12 @@
 }
 
 .practice-map-image {
+    .map-container {
+        height: 200px;
+    }
     width: 100%;
-    height: 160px;
+    max-width:450px;
+    height: 200px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
