--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -110,6 +110,7 @@ blockquote {
 .btn-floating {
     width:60px;
     height:60px;
+    line-height:46px;
     position: fixed;
     right:15px;
     bottom: 15px;
