--- a/client/wikipage.less
+++ b/client/wikipage.less
@@ -26,4 +26,8 @@
         margin-top:0px;
         margin-bottom:15px;
     }
+    iframe, img {
+        max-width: 90%;
+        max-height: auto;
+    }
 }
