--- a/client/css/default.design.less
+++ b/client/css/default.design.less
@@ -9,6 +9,6 @@ input,
 .form-control {
     border-radius: 2px;
 }
-.panel, .tab-content {
+.panel {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
 }
