--- a/client/wikipage.less
+++ b/client/wikipage.less
@@ -1,15 +1,14 @@
 @import "lib/custom.bootstrap.import.less";
 
 .wikipage {
-    .tab-content {
+    .page-heading {
         background-color:white;
+        box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         @media(min-width:@screen-sm-min) {
             padding:15px;
         }
         @media(max-width:@screen-xs-max) {
-            h3 {
-                padding:5px;
-            }
+            padding:5px;
         }
     }
     .historic {
