some fixes, upgrade 1.4.3.1

--- a/client/blog.less
+++ b/client/blog.less
@@ -63,6 +63,11 @@
 }
 .action-preview-extender {
     display:none;
+    cursor: pointer;
+}
+
+.panel .action-preview-extender {
+    display:block;
 }
 @media (min-width: @screen-md-min) {
     .blog-preview .blog-image {
