continuing with autoform

--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -211,6 +211,7 @@ blockquote {
     overflow: hidden;
     transition: all 250ms;
     padding: 10px 15px;
+    z-index: 1060px;
     font-size:0.9em;
     font-weight:thin;
     max-width:@screen-sm-min;
