--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -211,15 +211,15 @@ blockquote {
     overflow: hidden;
     transition: all 250ms;
     padding: 10px 15px;
-    z-index: 1060px;
+    z-index: 1060;
     font-size:0.9em;
-    font-weight:thin;
+    font-weight:100;
     max-width:@screen-sm-min;
     @media(min-width:@screen-sm-min) {
         width:300px;
         left:50%;
         margin-left:-150px;
-        bottom: 35px;
+        bottom: 5px;
         box-shadow: 1px 1px 3px rgba(0.5,0.5,0.5,0.5);
     }
     a {
