--- a/client/start.less
+++ b/client/start.less
@@ -3,6 +3,9 @@
 .event-item .image {
     height: 40px;
 }
+.start-content {
+    padding-bottom: 20px;
+}
 @media(max-width: @screen-xs-max) {
     .start-content {
         padding:0px;
