added user mail change

--- a/client/header.less
+++ b/client/header.less
@@ -118,6 +118,8 @@
         box-shadow: 4px 0px 12px rgba(0, 0, 0, 0.5);
         -webkit-transition: all 250ms;
         transition: all 250ms;
+        will-change: transform;
+        transform: translateZ(0);
         .title {
             position: relative;
             background-size: cover;
