--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -12,6 +12,11 @@
         bottom:25px;
     }    
 }
+.modal-dialog {
+    will-change: transform;
+    transform: translateZ(0);    
+}
+
 blockquote {
     font-size:1em;
 }
