many fixes and other stuff added static page initialization played tournaments sorting

--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -232,6 +232,7 @@ blockquote {
     a {
         float: right;
         color: @hallunkenOrange;
+        font-weight: bold;
     }
 }
 .notification-info.away {
