Update zu Meteor 1.5 Using dynamic import

--- a/client/_editing.less
+++ b/client/_editing.less
@@ -1,27 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
-.fix-wysiwyg {
-    position: fixed;
-    top: 50px;
-    left:0px;
-    padding-top:10px;
-    z-index: 1000;
-}
-
-.wysiwyg-toolbar {
-    background-color: white;
-    white-space: normal;
-    .wysiwyg-toolbar-icon {
-        color:black;
-    }
-}
-
-.wysiwyg-editor {
-    background-color: white;
-    min-height: 10em;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.25) inset;
-    max-height: calc(100vh - 125px);
-    overflow-y: auto;
-}
+@import "/client/lib/custom.bootstrap.import.less";
 
 .opt-editable-field,.opt-editable-field:hover,.opt-editable-field:focus {
     border: none;
