--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -1,5 +1,5 @@
 /* CSS declarations go here */
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 @import "css/hallunken.design.less";
 
 @progress-bar-muted-bg: @gray-light;
