--- a/client/wikipage.less
+++ b/client/wikipage.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 
 .wikipage {
     .page-heading {
