--- a/imports/client/tournaments/team.less
+++ b/imports/client/tournaments/team.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 
 .editor-container {
     border: solid 1px #dddddd;
@@ -79,6 +79,9 @@
             button.btn {
                 text-align:left;
             }
+        }
+        .player-addon {
+            
         }
         @media(min-width:@screen-sm-min) {
             padding:1px 15px;
