--- a/client/blog.less
+++ b/client/blog.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 .blog-title {
     font-size: 1.5em;
     margin-bottom: 0.7em;
