--- a/client/search.less
+++ b/client/search.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 
 .search-field {
     max-width:170px;
