--- a/imports/client/files/files.less
+++ b/imports/client/files/files.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 
 .folder-tree-item .folder-tree-item {
     padding-left: 20px;
