--- a/imports/client/files/images.less
+++ b/imports/client/files/images.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 
 .image-viewer {
     .col-sm-8.start-content {
