--- a/packages/tweeter/src/tweeter.less
+++ b/packages/tweeter/src/tweeter.less
@@ -1,4 +1,4 @@
-@import "lib/custom.bootstrap.import.less";
+@import "/client/lib/custom.bootstrap.import.less";
 .tweet {
     position: relative;
     border-top: 1px solid @panel-default-border;
