finished dynamic import

--- a/imports/client/forms/wysiwyg.less
+++ b/imports/client/forms/wysiwyg.less
@@ -1,6 +1,11 @@
 .ultisite-wysiwyg {
   position: relative;
+  padding: 10px;
   padding-top: 40px;
+  .rich-text-input {
+    min-height: 4em;
+    border:1px solid lightgray;
+  }
   .wysiwyg-toolbar {
     top: 0px;
     margin:0px;
