Added linkto to wysiwyg editor

--- a/imports/client/forms/wysiwyg.less
+++ b/imports/client/forms/wysiwyg.less
@@ -2,9 +2,10 @@
   position: relative;
   padding: 10px;
   padding-top: 40px;
+  background-color: white;
   .rich-text-input {
     min-height: 4em;
-    border:1px solid lightgray;
+    border-top:1px solid lightgray;
   }
   .wysiwyg-toolbar {
     top: 0px;
