more editing in rich text

--- a/client/_editing.less
+++ b/client/_editing.less
@@ -84,3 +84,8 @@
 .editable-image {
     display: inline-block;
 }
+
+.editable-image.pull-right, .editable-image.pull-left {
+    display: block;
+    margin:0px 15px;
+}
