some updates, events more text

--- a/client/wikipage.less
+++ b/client/wikipage.less
@@ -5,6 +5,8 @@
       position: relative;
       color:gray;
       border-bottom: 1px solid gray;
+      padding-bottom: 3px;
+      margin-top:10px;
       .dropdown {
         position: absolute;
         right:0px;
