fixed tournament editing, header annoyances

--- a/client/header.less
+++ b/client/header.less
@@ -11,6 +11,14 @@
         float:left;
         padding: 15px 8px 15px 20px;
     }
+    .navbar-nav.visible-xs {
+      li {
+          max-width:50%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+      }
+  }
 }
 #dropdownUserMenu.btn-danger {
     background-color: @brand-danger;
