--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -20,6 +20,9 @@
 blockquote {
     font-size:1em;
 }
+.pointer {
+    cursor: pointer;    
+}
 .content-overlay {
     display: none;
     position: fixed;
