redesigned search dialog

--- a/client/search.less
+++ b/client/search.less
@@ -1,7 +1,7 @@
 @import "/client/lib/custom.bootstrap.import.less";
 
 .search-field {
-    max-width:170px;
+//    max-width:170px;
 }
 
 .open-sidebar .navbar-search-field {
