--- a/client/css/hallunken.design.less
+++ b/client/css/hallunken.design.less
@@ -22,7 +22,7 @@ body {
     }
 
 
-    .navbar-default {
+    .navbar-default, .navbar.navbar-default.navbar-fixed-top {
         background-color: @hallunkenGreen;
         border: 0px solid darken(@hallunkenGreen, 20%);
         border-radius: 0px;
