optimized images fixed menu bug

--- a/client/header.less
+++ b/client/header.less
@@ -11,8 +11,6 @@
       height: 40px;
       padding: 10px 15px;
       white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
       a {
         text-decoration: none;
         padding: 10px 10px;
@@ -27,6 +25,10 @@
         }
       }
     } 
+    >div.visible-xs {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
   } 
 }
 #dropdownUserMenu.btn-danger {
