Added Datenschutz, some fixes, serviceWorker preps

--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -163,6 +163,7 @@ blockquote {
 }
 .page-content {
     padding-top: 200px;
+    padding-bottom: 50px;
     > div {
         transition: opacity 150ms;
         opacity : 1.0;
