--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -243,21 +243,51 @@ blockquote {
     padding: 0px 15px;
     height: 0px;
 }
-
+.modal-dialog {
+    .modal-header {
+      button.confirm {
+        display: none;
+      }
+    }
+}
 @media(max-width:@screen-xs-max) {
-    
+.modal {
+    background-color: white;    
   .modal-dialog {
-      .modal-header {
+      margin:0px;
+      .modal-content {
+        box-shadow: none;
+        border:none;
+        .modal-header {
+        button.confirm {
+            float:right;
+            display: block;
+            cursor: pointer;
+            background-image: none;
+            border: 1px solid transparent;
+            white-space: nowrap;
+            padding: 6px 12px; 
+            background-color: transparent;
+            text-transform: uppercase; 
+            font-size: 14px;       
+            line-height: 1.75;   
+        }
         position: sticky;
         z-index: 100;
         background-color: white;
         top: 0px;
         button.close {
           float:left;
+          margin-top: 0px;
+          margin-right: 15px;
+          opacity: 1.0;
+          padding: 6px 6px; 
         }
         .modal-title {
-          padding-left: 20px;
+            padding: 6px 20px; 
         }
       }
+    }
   }
+}
 }
