switched to npm for jquery and bootstrap

--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -1,5 +1,5 @@
 /* CSS declarations go here */
-@import "/client/lib/custom.bootstrap.import.less";
+@import '{}/node_modules/bootstrap/less/bootstrap.less';
 @import "css/hallunken.design.less";
 
 @progress-bar-muted-bg: @gray-light;
