optimized some offline stuff

--- a/client/header.less
+++ b/client/header.less
@@ -78,7 +78,7 @@
     display: none;
 }
 
-.navbar-footer {
+.navbar-footer.navbar.navbar-default {
     position: fixed;
     bottom: 0px;
     width: 100%;
