directly using font awesome

--- a/client/ultisite.less
+++ b/client/ultisite.less
@@ -1,5 +1,6 @@
 /* CSS declarations go here */
 @import '{}/node_modules/bootstrap/less/bootstrap.less';
+@import '../imports/client/fontawesome/font-awesome.less';
 @import "css/hallunken.design.less";
 
 @progress-bar-muted-bg: @gray-light;
