--- a/imports/client/tournaments/tournament.scss
+++ b/imports/client/tournaments/tournament.scss
@@ -131,7 +131,7 @@
     overflow: hidden;
 }
 
-.team-player-state .progress-bar-disabled {
+.team-player-state .bg-disabled {
     background-color: lightgray;
     color: black;
 }
