--- a/imports/client/css/blog.scss
+++ b/imports/client/css/blog.scss
@@ -44,7 +44,7 @@
         background-color: white;
         margin-top:5px;
     }
-    li a.add-file  , li.divider {
+    li a.add-file  , li.dropdown-divider {
         display:none;
     }
 }
