--- a/imports/client/css/header.scss
+++ b/imports/client/css/header.scss
@@ -26,7 +26,7 @@
         }
         a.active {
           margin-bottom: 0px;
-          border-bottom: 2px solid $navbar-dark-color;
+          border-bottom: 3px solid $hallunkenOrange;
         }
       }
     } 
