optimized for smaller devices

--- a/imports/client/tournaments/tournament.scss
+++ b/imports/client/tournaments/tournament.scss
@@ -84,7 +84,7 @@
     }
 }
 
-@include media-breakpoint-down(xs) {
+@include media-breakpoint-down(sm) {
     .tournament-filter-offset {
         margin-top: 50px;
     }
