Fixed a  lot of hat stuff

--- a/imports/client/design/hallunken.design.scss
+++ b/imports/client/design/hallunken.design.scss
@@ -99,7 +99,7 @@ body {
         color: $hallunkenOrange;
 
         a.user-link {
-            color: 'white';
+            color: white;
         }
 
         .list-group>a,
