--- a/packages/autoform/client/forms.scss
+++ b/packages/autoform/client/forms.scss
@@ -3,51 +3,52 @@
 @import '{}/node_modules/bootstrap/scss/_mixins.scss';
 
 .ultisite-autoform {
-    .autoform-checkbox {
-        cursor: pointer;
-        padding-left:5px;
+  .autoform-checkbox {
+    cursor: pointer;
+    padding-left: 5px;
+  }
+  .autoform-calendar {
+    width: 320px;
+    max-width: 90vw;
+    position: relative;
+    .form-control-plaintext {
+      text-align: center;
+      padding: 6 12px;
     }
-    .autoform-calendar {
-        width:320px;
-        max-width:90vw;
-        position: relative;
-        .form-control-plaintext {
-            text-align: center;
-            padding: 6 12px;
-        }
-        .day,.day-header {
-            float:left;
-            width: 14.28571428571429%;
-            text-align: center;
-            position: relative;
-            min-height: 1px;
-            padding: 10px 15px;
-            cursor:pointer;
-        }
-        .day-header {
-            cursor:auto;
-            font-weight: bold;
-            border-bottom: 1px solid gray;
-        }
-        .day.muted {
-            color: lightgray;
-        }
-        .day.active {
-            padding: 8px 13px;
-            border: 2px solid blue;
-        }
-        .day:hover {
-            background-color:lightgray;
-
-        }
+    .day,
+    .day-header {
+      float: left;
+      width: 14.28571428571429%;
+      text-align: center;
+      position: relative;
+      min-height: 1px;
+      padding: 8px 13px;
+      border: 2px solid transparent;
+      cursor: pointer;
     }
-    .form-text {
-        transition: all 200ms;
-        max-height:0px;
-        overflow:hidden;
+    .day-header {
+      cursor: auto;
+      font-weight: bold;
+      border-bottom: 1px solid gray;
     }
-    .is-invalid .form-text {
-        max-height: 4em;
-        color: $danger;
+    .day.muted {
+      color: lightgray;
     }
+    .day.active {
+      padding: 8px 13px;
+      border: 2px solid blue;
+    }
+    .day:hover {
+      background-color: lightgray;
+    }
+  }
+  .form-text {
+    transition: all 200ms;
+    max-height: 0px;
+    overflow: hidden;
+  }
+  .is-invalid .form-text {
+    max-height: 4em;
+    color: $danger;
+  }
 }
