replaced fontawesome with material fonts

--- a/imports/client/css/ultisite.less
+++ b/imports/client/css/ultisite.less
@@ -1,7 +1,5 @@
 @import './colors.less';
-@import '../fontawesome/fontawesome.less';
-@fa-font-path: '/fonts';
-@import '../fontawesome/solid.less';
+@import './material-icons.less';
 @import '../design/hallunken.design.less';
 @import './_editing.less';
 @import './blog.less';
