--- a/imports/client/css/material-icons.less
+++ b/imports/client/css/material-icons.less
@@ -27,7 +27,7 @@
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
-  vertical-align: text-bottom;
+  vertical-align: middle;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
