replacing color names, reduce icon font size

--- a/imports/client/css/colors.less
+++ b/imports/client/css/colors.less
@@ -1,13 +1,11 @@
-@hallunkenGreen: rgb(28, 95, 60);
-@hallunkenOrange: rgb(255, 133, 48);
-@hallunkenOrangeDark: rgb(255, 90, 48);
-@hallunkenBeige: rgb(221, 221, 187);
+@secondary: #15624c;
+@primary: #d3d3d3;
+@primaryDark: #aaaaaa;
+@backgroundColor: #d3d3d3;
 @warning: yellow;
 @success: green;
 @danger: red;
 @info: cyan;
 @gray-300: gray;
-@secondary: @hallunkenGreen;
-@primary: @hallunkenOrange;
 @text-muted: gray;
 @input-border: gray;
