--- a/imports/client/css/header.less
+++ b/imports/client/css/header.less
@@ -23,7 +23,7 @@
       }
       .header-link.active {
         margin-bottom: 0px;
-        border-bottom: 3px solid @hallunkenOrange;
+        border-bottom: 3px solid @primary;
       }
     }
     > div.d-block d-sm-none {
