--- a/imports/client/css/material-icons.less
+++ b/imports/client/css/material-icons.less
@@ -4,8 +4,10 @@
   font-weight: 400;
   src: local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url(/fonts/Material.Outlined.woff2) format('woff2');
+    url(/fonts/SelectedMaterialIcons.woff2) format('woff2');
 }
+// font link for download
+// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,eye,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,help,history,home,image,info,info_circle,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_4,phone,schedule,search,select_check_box,send,settings,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,videocam
 
 .fa.fa-fw {
   width:24px;
@@ -92,7 +94,7 @@
 .fa.fa-filter:before { content:'filter'}
 .fa.fa-folder-o:before { content:'folder'}
 .fa.fa-folder-open-o:before { content:'folder_open'}
-.fa.fa-github:before { content:'github'}
+.fa.fa-github:before { content:'code'}
 .fa.fa-group:before { content:'group'}
 .fa.fa-header:before { content:'format_h1'}
 .fa.fa-home:before { content:'home'}
@@ -110,7 +112,7 @@
 .fa.fa-map-marker:before { content:'location_on'}
 .fa.fa-map-o:before { content:'map'}
 .fa.fa-money:before { content:'money'}
-.fa.fa-offline:before { content:'offline'}
+.fa.fa-offline:before { content:'signal_wifi_off'}
 .fa.fa-paint-brush:before { content:'format_color_text'}
 .fa.fa-phone:before { content:'phone'}
 .fa.fa-plus:before { content:'add'}
